BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Account_Team_Member_vod__c.object
<CustomObject>
    <description>Object to store team members on an account plan</description>
    <fields>
        <fullName>Account_Plan_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The account plan an account team member is related to</description>
        <label>Plan</label>
        <referenceTo>Account_Plan_vod__c</referenceTo>
        <relationshipName>Account_Team_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_ID_vod__c</fullName>
        <description>External ID</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>120</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Role_vod__c</fullName>
        <description>Role of a user within an account plan</description>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Key Account Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Sponsor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Team Member</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Rep</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Team_Member_Name_vod__c</fullName>
        <description>Text value of the team member on an account plan. Used for users who are not in the CRM system. Stamped via trigger when the Team Member is populated.</description>
        <label>Team Member Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Member_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Team member on an account plan</description>
        <label>Team Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Team_Member_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Team Member</label>
    <nameField>
        <displayFormat>ATM-{0000000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Team Members</pluralLabel>
    <recordTypes>
        <fullName>Account_Team_Member_vod</fullName>
        <active>true</active>
        <description>Base record type for Account Team Members</description>
        <label>Account_Team_Member_vod</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>